[workspace]
resolver = "2"

members = [
    "auction-server",
    "gas-oracle",
    "sdk/rust/simple-searcher",
    "sdk/rust/testing-searcher",
    "sdk/rust",
    "vault-simulator",
]
exclude = ["contracts/svm"]

[workspace.dependencies]
time = "0.3.36"
base64 = "0.22.1"
bincode = "1.3.3"
utoipa = "4.2.3"
uuid = "1.1.2"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9.0"
ethers = "2.0.14"
solana-sdk = "2.1.7"
solana-rpc-client = "=2.1.7"
solana-transaction-status = "=2.1.7"
solana-client = "=2.1.7"
email_address = "0.2.4"
anyhow = "1.0.75"
strum = "0.26.3"
tokio-stream = "0.1.14"
tokio = "1.28"
tower-http = "0.5.2"
futures = { version = "0.3", default-features = false }
clap = "4.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-stream = "0.3.5"
serde_yaml = "0.9.25"
url = "2.5.4"
rand = "0.8.5"
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "6df05aa" }
litesvm = { version = "0.4.0" }
