[workspace]
resolver = "2"

members = [
    "auction-server",
    "gas-oracle",
    "sdk/rust/simple-searcher",
    "sdk/rust/testing-searcher",
    "sdk/rust",
    "vault-simulator",
]
exclude = ["contracts/svm"]

[workspace.dependencies]
time = "0.3.36"
base64 = "0.22.1"
bincode = "1.3.3"
utoipa = "4.2.3"
uuid = "1.1.2"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9.0"
ethers = "2.0.14"
solana-sdk = "2.0.13"
solana-rpc-client = "2.0.13"
solana-transaction-status = "2.0.13"
solana-client = "2.0.13"
email_address = "0.2.4"
anyhow = "1.0.75"
strum = "0.26.3"
tokio-stream = "0.1.14"
tokio = "1.28"
tower-http = "0.5.2"
futures = { version = "0.3", default-features = false }
clap = "4.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-stream = "0.3.5"
serde_yaml = "0.9.25"
url = "2.5.4"
rand = "0.8.5"
anchor-lang = "0.30.1"
litesvm = "0.3.0"
borsh = "1.5.1"

# The curve25519-dalek crate is a dependency of solana-sdk.
# This crate relies on a specific version of zeroize that is incompatible with many other packages.
# You can find more details in this issue https://github.com/solana-labs/solana/issues/26688
# Solana Labs has provided a solution for some of these package incompatibilities, which can be found here https://github.com/solana-labs/solana/blob/27eff8408b7223bb3c4ab70523f8a8dca3ca6645/Cargo.toml#L514
# We will be able to remove this patch once the only version of solana that we use is 2 or later.
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"

# Analoguous to the zeroize issue above, the aes-gcm-siv crate,
# a transitive dependency via solana-sdk,
# has dependencies on the crates zeroize and subtle that are too strict.
# They later updated the crate to loosen the dependencies
# in the commit we are using for this patch.
# We will be able to remove this patch once the only version of solana that we use is 2 or later.
[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "e1e35e0c4f4943da0a99ceb8477c421dcfae2c33"
