[workspace]
resolver = "2"

members = [
    "auction-server",
    "sdk/rust/simple-searcher",
    "sdk/rust/testing-searcher",
    "sdk/rust",
]
exclude = ["contracts/svm"]

[workspace.dependencies]
time = "0.3.36"
base64 = "0.22.1"
bincode = "1.3.3"
utoipa = "5.3.1"
uuid = "1.1.2"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.9.0"
ethers = "2.0.14"
solana-sdk = "2.0.13"
solana-rpc-client = "2.0.13"
solana-transaction-status = "2.0.13"
solana-client = "2.0.13"
email_address = "0.2.4"
anyhow = "1.0.75"
strum = "0.26.3"
tokio-stream = "0.1.14"
tokio = "1.28"
tower-http = "0.5.2"
futures = { version = "0.3", default-features = false }
clap = "4.4.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-stream = "0.3.5"
serde_yaml = "0.9.25"
url = "2.5.4"
rand = "0.8.5"
anchor-lang = "0.31.0"
litesvm = "0.6.0"
borsh = "1.5.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-memo-client = "0.1.0"
spl-token-2022 = "7.0.0"

# This patch disables debugging features in litesvm runtime_environments
# which allows more programs to be loaded in the runtime
[patch.crates-io.litesvm]
git = "https://github.com/guibescos/litesvm"
rev = "52f822f88de8c32a217778087e797b40576e6e41"
