[package]
name = "auction-server"
version = "0.2.4"
edition = "2021"
license-file = "license.txt"

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.4.0", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
axum = { version = "0.6.20", features = ["ws", "tracing"] }
axum-streams = { version = "0.10.0", features = ["json", "text"] }
clap = { version = "4.4.4", features = ["derive", "env", "cargo"] }
tracing = { version = "0.1.40", features = ["log"] }
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
async-stream = "0.3.5"
utoipa             = { version = "3.4.0", features = ["axum_extras"] }
utoipa-swagger-ui  = { version = "3.1.4", features = ["axum"] }
serde_yaml = "0.9.25"
ethers      = "2.0.10"
axum-macros = "0.4.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "uuid", "bigdecimal" ] }
