[package]
name = "auction-server"
version = "0.10.0"
edition = "2021"
license-file = "license.txt"

[build-dependencies]
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }

[dependencies]
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread", "signal"] }
tokio-stream = "0.1.14"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
axum = { version = "0.7.5", features = ["ws", "tracing"] }
axum-streams = { version = "0.10.0", features = ["json", "text"] }
clap = { version = "4.4.4", features = ["derive", "env", "cargo"] }
tracing = { version = "0.1.40", features = ["log"] }
anyhow = "1.0.75"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
async-stream = "0.3.5"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
utoipa-redoc = { version = "4", features = ["axum"] }
serde_yaml = "0.9.25"
ethers      = { version = "2.0.14", features = ["ws"] }
axum-macros = "0.4.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "uuid", "bigdecimal" ] }
tokio-util = { version = "0.7.10", features = ["rt"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
email_address = "0.2.4"
rand = "0.8.5"
base64 = "0.22.1"
time = { version = "0.3.36", features = ["serde"] }
axum-prometheus = "0.6.1"
reqwest = { version = "0.11.27" }
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0" }
gas-oracle = { path = "../gas-oracle" }
serde_path_to_error = "0.1.16"
solana-sdk = "2.0.7"
bincode = "1.3.3"
serde_with = "3.9.0"
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
anchor-lang = "0.30.1"
express-relay = { path = "../contracts/svm/programs/express_relay" }

# The curve25519-dalek crate is a dependency of solana-sdk.
# This crate relies on a specific version of zeroize that is incompatible with many other packages.
# You can find more details in this issue https://github.com/solana-labs/solana/issues/26688
# Solana Labs has provided a solution for some of these package incompatibilities, which can be found here https://github.com/solana-labs/solana/blob/27eff8408b7223bb3c4ab70523f8a8dca3ca6645/Cargo.toml#L514
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
