[package]
name = "auction-server"
version = "0.24.0"
edition = "2021"
license-file = "license.txt"

[build-dependencies]
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }

[dependencies]
arc-swap = "1.7.1"
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
axum = { version = "0.7.5", features = ["ws", "tracing"] }
axum-streams = { version = "0.10.0", features = ["json", "text"] }
clap = { workspace = true, features = ["derive", "env", "cargo"] }
tracing = { workspace = true, features = ["log"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
async-stream = {workspace = true}
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
serde_yaml = { workspace = true }
axum-macros = "0.4.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "postgres", "time", "uuid", "bigdecimal", "json" ] }
tokio-util = { version = "0.7.10", features = ["rt"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
email_address = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
time = { workspace = true, features = ["serde"] }
axum-prometheus = "0.6.1"
reqwest = { version = "0.11.27" }
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0" }
serde_path_to_error = "0.1.16"
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
anchor-lang = { workspace = true }
express-relay = { path = "../contracts/svm/programs/express_relay" }
solana-rpc-client = { workspace = true }
solana-transaction-status = { workspace = true }
borsh = { workspace = true }
litesvm = { workspace = true }
express-relay-api-types = { path = "api-types" }
strum.workspace = true
spl-associated-token-account = { workspace = true }
spl-token = { workspace = true }
mockall_double = "0.3.1"
spl-memo-client = { workspace = true }
spl-token-2022 = { workspace = true }

[dev-dependencies]
mockall = "0.13.1"
express-relay-client = { path = "../sdk/rust" }
