[package]
name = "vault-simulator"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread", "signal"] }
tokio-stream = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
clap = { workspace = true, features = ["derive", "env", "cargo"] }
tracing = { workspace = true, features = ["log"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
async-stream = {workspace = true}
utoipa             = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui  = { version = "3.1.4", features = ["axum"] }
serde_yaml = { workspace = true}
ethers      = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.11.27" }
base64 = { workspace = true }
gas-oracle = { path="../gas-oracle"}
