[package]
name = "express-relay-api-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["serde", "v4"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
solana-sdk = { workspace = true }
ethers = { workspace = true }
time = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
bincode = { workspace = true }
