[package]
name = "express-relay-api-types"
version = "0.2.1"
edition = "2021"
description = "Pyth Express Relay api types"
repository = "https://github.com/pyth-network/per"
license = "Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true, features = ["axum_extras"] }
uuid = { workspace = true, features = ["serde", "v4"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
solana-sdk = { workspace = true }
ethers = { workspace = true }
time = { workspace = true, features = ["serde"] }
base64 = { workspace = true }
bincode = { workspace = true }
email_address = { workspace = true }
strum = { workspace = true }
http = "1.2.0"
strum_macros = "0.26.4"
