[workspace]
members = [
    "testing",
    "programs/*",
    "cli"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
anchor-spl = "0.30.1"
litesvm = "0.1.0"
solana-program = "1.18.26"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"
