[workspace]
members = [
    "testing",
    "programs/*",
    "cli"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = ">=0.29.0"
anchor-client = ">=0.29.0"
anchor-spl = "0.31.0"
litesvm = "0.6.0"
solana-program-test = "2.1.0"
solana-sdk = "2.1.0"
