[package]
name = "testing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-sdk = "1.18.12"
express_relay = { path = "../programs/express_relay", features = ["no-entrypoint"] }
dummy = { path = "../programs/dummy", features = ["no-entrypoint"] }
litesvm = "0.1.0"
