[tool.poetry]
name = "express-relay"
version = "0.28.0"
description = "Utilities for searchers and protocols to interact with the Express Relay protocol."
authors = ["dourolabs"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^7.8.0"
httpx = "^0.28.1"
websockets = "^10.0"
argparse = "^1.4.0"
pydantic = "^2.10.6"
anchorpy = "^0.21.0"
solana = "^0.36.6"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pyflakes = "^3.2.0"
mypy = "^1.9.0"
anchorpy = {extras = ["cli"], version = "^0.21.0"}
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
