[package]
name = "express-relay-client"
version = "0.2.1"
edition = "2021"
description = "Pyth Express Relay client"
repository = "https://github.com/pyth-network/per"
license = "Apache-2.0"

[dependencies]
express-relay-api-types = { version = "0.2.0", path = "../../auction-server/api-types" }
reqwest = { version = "0.12.9", features = ["json"] }
url = { workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio = { workspace = true, features = ["macros"] }
futures-util = "0.3.31"
ethers = { workspace = true }
solana-sdk = { workspace = true }
