[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.30.1"
clap = { version = "4.5.17", features = ["derive"] }
express-relay = { path = "../programs/express_relay", features = ["no-entrypoint", "cpi"] }
