[package]
name = "testing"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = ">=0.29.0"
spl-token = ">=0.7.0"
spl-associated-token-account = ">=0.6.0"
solana-sdk = ">=1.18.0"
express-relay = { path = "../programs/express_relay", features = ["no-entrypoint"] }
dummy = { path = "../programs/dummy", features = ["no-entrypoint"] }
litesvm = "0.1.0"
