[package]
name = "testing"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
express-relay = { path = "../programs/express_relay", features = ["no-entrypoint"] }
dummy = { path = "../programs/dummy", features = ["no-entrypoint"] }
litesvm = "0.1.0"
