[package]
name = "express_relay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "express_relay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
anchor-syn = "0.30.1"
sha2 = "0.10.8"
solana-program = "1.18.12"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}

[dev-dependencies]
solana-program-test = "1.18.12"
solana-sdk = "1.18.12"
spl-token = "4.0.0"
