[package]
name = "ez_lend_vanilla"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ez_lend_vanilla"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
anchor-spl = "0.30.0"
express_relay = { path = "../express_relay", features = ["no-entrypoint"] }
