[package]
name = "express-relay-simple-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
express-relay-client = { path = ".." }
anyhow = { workspace = true }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
time = { workspace = true }
tokio-stream = { workspace = true }
rand = "0.8.5"
clap = { version = "4.5.23", features = ["derive", "env"] }
