[package]
name = "testing-searcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
express-relay-simple-searcher = { path = "../simple-searcher" }
express-relay-client = { path = ".." }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
