[package]
name = "dummy"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dummy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = ">=0.29.0"
express-relay = { path = "../express_relay", features = ["no-entrypoint", "cpi"] }

[dev-dependencies]
solana-program-test = ">=1.17.3"
solana-sdk = ">=1.17.3"
