[package]
name = "dummy"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dummy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
express-relay = { path = "../express_relay", features = ["no-entrypoint", "cpi"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
