[package]
name = "express-relay"
version = "0.1.0"
description = "Express Relay program for handling permissioning and bid distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "express_relay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-syn = "0.30.1"
